# Kunsmatige_intiligentie_eindopdracht

./: .gitignore
dependencies/SDL2/include/: SDL_assert.h  SDL_audio.h  SDL_endian.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_log.h  SDL_mutex.h  SDL_pixels.h  SDL_rect.h  SDL_render.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_syswm.h  SDL_test_common.h  SDL_test_crc32.h  SDL_test_harness.h  SDL_test_random.h  SDL_thread.h  SDL_timer.h  SDL_version.h  SDL_video.h
dependencies/SDL2_image/include/: SDL_image.h
libkmint/include/kmint/: main.hpp
libkmint/include/kmint/graph/: basic_graph.hpp  graph.hpp
pigisland/: CMakeLists.txt
pigisland/include/: Astar.h
pigisland/include/kmint/pigisland/: BorderMarker.hpp  boat.hpp  pig.hpp  resources.hpp  shark.hpp
pigisland/include/kmint/pigisland/Forces/: Alignment.hpp  AwayFromBorder.hpp  Cohesion.hpp  Force.hpp  Seperation.hpp  ToKnabbel.hpp  ToPorcus.hpp
pigisland/include/states/: AttackState.h  Forest.h  GrainField.h  GrassIsland.h  RestState.h  SavingPigsState.h  ScaredState.h  State.h  WanderState.h
pigisland/src/: Astar.cpp
pigisland/src/kmint/pigisland/: BorderMarker.cpp  boat.cpp  main.cpp  pig.cpp  resources.cpp  shark.cpp
pigisland/src/kmint/pigisland/Forces/: Alignment.cpp  AwayFromBorder.cpp  Cohesion.cpp  Seperation.cpp  ToKnabbel.cpp  ToPorcus.cpp
pigisland/src/states/: Attackstate.cpp  Forest.cpp  GrainField.cpp  GrassIsland.cpp  RestState.cpp  SavingPigsState.cpp  ScaredState.cpp  WanderState.cpp
(+7 files in other folders)
